add JWT and get user endpoint
